--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Les petits plats</title>
+
+  <meta name="author" content="Alexia Skrzypczak"> 
+  <meta name="description" content="This is project 7 of the Javascript
+  application Developer - React course at Openclassrooms."> 
+  
+  <!--  <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon"> -->
+
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <header class="app__header">
@@ -32,8 +41,10 @@
   <main class="app__main">
       <ul class="recipes__list">
         <li class="recipes__item">
-          <a class="recipes__link" href="#">
-            <img class="recipes__picture" src="#" alt="">
+          <!-- <a class="recipes__link" href="#"> -->
+            <div class="recipe__containerPicture">
+              <!-- <img src="" alt=""> -->
+            </div>
             <div class="recipe__titleContainer">
               <div class="recipe__content">
                 <h3 class="recipe__title">Titre de la recette</h3>
@@ -46,7 +57,7 @@
                 <p class="recipe__process">procédure de la recette</p>
               </div>
             </div>
-          </a>
+          <!-- </a> -->
         </li>
       </ul>
   </main>
