Logo style & search style

--- a/index.html
+++ b/index.html
@@ -29,26 +29,31 @@
       <h1 class="header__title">Les petits plats</h1>
     </div>
     <div class="header__containerSearch">
-      <input class="header__searchInput" type="search" name="recipes" id="recipes" placeholder="Rechercher une recette"></input>
-      <label class="header__searchLabel" for="recipes">
-        <button type="submit"> 
+      <input 
+      class="search__input" 
+      type="search" 
+      name="recipes" 
+      id="recipes" 
+      placeholder="Rechercher une recette"></input>
+      <label class="search__label" for="recipes">
+        <button class="search__button" type="submit"> 
           <img 
-          class="header__logo" 
+          class="search__logo" 
           src="assets/research.svg" 
           alt="logo"/>
         </button>
       </label>
     </div>
     <div class="header__containerTag">
-      <ul class="header__tagList">
-        <li class="header__tagItem">Tag</li>
+      <ul class="tag__list">
+        <li class="tag__item">Tag</li>
       </ul>
     </div>
     <div class="header__containerSort">
-      <ul class="header__sortList">
-        <li class="header__sortItem--ingredients">Ingrédients</li>
-        <li class="header__sortItem--appliances">Apparaeils</li>
-        <li class="header__sortItem--tools">Ustensiles</li>
+      <ul class="sort__list">
+        <li class="sort__item sort__item--ingredients">Ingrédients</li>
+        <li class="sort__item sort__item--appliances">Apparaeils</li>
+        <li class="sort__item sort__item--tools">Ustensiles</li>
       </ul>
     </divclass>
   </header>
