--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Lato:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/index.css"> 
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
   <header class="app__header">
@@ -38,7 +41,7 @@
       <label class="search__label" for="recipes">
         <button class="search__button" type="submit"> 
           <img 
-          class="search__logo" 
+          class="search__picture" 
           src="assets/research.svg" 
           alt="logo"/>
         </button>
@@ -46,7 +49,11 @@
     </div>
     <div class="header__containerTag">
       <ul class="tag__list">
-        <li class="tag__item">Tag</li>
+        <li class="tag__item">Tag
+          <button class="tag__button" type="button">
+            <img class="tag__picture" src="assets/cross.svg" alt="cross">
+          </button>
+        </li>
       </ul>
     </div>
     <div class="header__containerSort">
