--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         </li>
       </ul>
     </div>
+    <!-- collapse qui se déroule sur un input text avec liste de tous les
+ingrédients et qui diminue selon se qui est tapé -->
     <div class="header__containerSort">
       <ul class="sort__list">
         <li class="sort__item sort__item--ingredients">Ingrédients</li>
