--- a/index.html
+++ b/index.html
@@ -28,25 +28,26 @@
       <img 
       class="header__logo" 
       src="assets/logo.svg" 
-      alt="logo"/>
+      alt="logo">
       <h1 class="header__title">Les petits plats</h1>
     </div>
-    <div class="header__containerSearch">
+    <form class="header__containerSearch">
       <input 
       class="search__input" 
       type="search" 
       name="recipes" 
-      id="recipes" 
-      placeholder="Rechercher une recette"></input>
+      placeholder="Rechercher une recette">
       <label class="search__label" for="recipes">
-        <button class="search__button" type="submit"> 
+        <button id="recipes" class="search__button" type="submit"> 
           <img 
           class="search__picture" 
           src="assets/research.svg" 
-          alt="logo"/>
+          alt="logo">
         </button>
       </label>
-    </div>
+    </form>
+  </header>
+  <main class="app__main">
     <div class="header__containerTag">
       <ul class="tag__list">
         <li class="tag__item">Tag
@@ -60,18 +61,63 @@
 ingrédients et qui diminue selon se qui est tapé -->
     <div class="header__containerSort">
       <ul class="sort__list">
-        <li class="sort__item sort__item--ingredients">Ingrédients</li>
-        <li class="sort__item sort__item--appliances">Apparaeils</li>
-        <li class="sort__item sort__item--tools">Ustensiles</li>
+        <li class="sort__item sort__item--open sort__item--ingredients">
+          <form class="sort__form">
+            <div class="sort__contenairButton">
+              <button class="sort__inputButton sort__inputButton--ingredients"
+              type=button>Ingrédients</button>
+              <button class="sort__selctButton sort__selectButton--ingredients" type="button">
+                <img class="sort__arrow sort__arrow--ingredients"
+                src="assets/arrow-down.svg" alt="arrow">
+              </button>
+            </div>
+            <fieldset>
+              <label class="sort__label"for="sort__inputText">
+                Rechercher un ingrédient
+              </label>
+              <input 
+              type="search"
+              id="sort__inputText"
+              name="sort__inputText">
+            </fieldset>
+            <div>
+              <label class="sort__label"
+              for="ingredients"> 
+                Rechercher un ingrédient
+              </label>
+              <select
+              class="sort__select sort__select--ingredients"
+              name="ingredients"
+              id="ingredients">
+                <option value="">
+                  Rechercher un ingrédient
+                </option>
+                <option value="coco">
+                  coco
+                </option>
+              </select> 
+            </div>
+          </form>
+        </li>
+        <li class="sort__item sort__item--appliances">
+          <button class="sort__button
+          sort__button--appliances" type="button">Appareils
+            <img class="sort__picture sort__arrow--ingredients" src="assets/arrow-down.svg" alt="arrow">
+        </button>
+        </li>
+        <li class="sort__item sort__item--tools">
+          <button class="sort__button sort__button--tools"
+          type="button">Ustensiles
+            <img class="sort__picture sort__arrow--ingredients"
+            src="assets/arrow-down.svg" alt="arrow">
+          </button>
+        </li>
       </ul>
-    </divclass>
-  </header>
-  <main class="app__main">
+    </div>
+    <!-- Mettre chaque recette dans un select qui ne fait rien -->
       <ul class="recipes__list">
         <li class="recipes__item">
-          <!-- <a class="recipes__link" href="#"> -->
             <div class="recipe__containerPicture">
-              <!-- <img src="" alt=""> -->
             </div>
             <div class="recipe__titleContainer">
               <div class="recipe__content">
@@ -85,7 +131,6 @@ ingrédients et qui diminue selon se qui est tapé -->
                 <p class="recipe__process">procédure de la recette</p>
               </div>
             </div>
-          <!-- </a> -->
         </li>
       </ul>
   </main>
