--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="This is project 7 of the Javascript
   application Developer - React course at Openclassrooms."> 
   
-  <!--  <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon"> -->
+   <link rel="Shortcut Icon" href="./assets/logo.png" type="image/png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -68,8 +68,7 @@
         </li>
       </ul>
     </div>
-    <!-- TODO collapse qui se déroule sur un input text avec liste de tous les
-    ingrédients et qui diminue selon se qui est tapé -->
+    <!-- TODO collapse qui se déroule sur un input text avec liste de tous les  ingrédients et qui diminue selon se qui est tapé -->
     <div class="header__containerSort">
       <ul class="sort__list">
         <li class="sort__item sort__item--open sort__item--ingredients">
