add dynamic sort WIP, and add collapse event open/close

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
   <!-- <script src="./scripts/utils/api.js"></script>
   <script src="./scripts/factories/recipe.js"></script> -->
   <!-- <script src="./scripts/models/recipe.js"></script> -->
+  <script src="./scripts/templates/sort.js"></script>
   <script src="./scripts/templates/recipe.js"></script>
   <script src="./scripts/page/index.js"></script>
 </body>
