--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
     <!-- TODO voir si les input sont type text ou search -->
     <div class="header__containerSort">
       <ul class="sort__list">
-        <!-- TODO initier avec la classe ...--close -->
-        <li class="sort__item sort__item--close sort__item--ingredients">
+        <!-- <li class="sort__item sort__item--close sort__item--ingredients">
           <button class="sort__button sort__button--ingredients" type=button>
               Ingrédients
                 <img 
@@ -135,8 +134,7 @@
               <p class="choice__value"> valeur </p>
             </div> 
           </form>
-        </li> 
-        <!-- TODO initier avec la classe ...--close -->
+        </li>  -->
         <li class="sort__item sort__item--close sort__item--appliances">
           <button class="sort__button
             sort__button--appliances" type="button">
@@ -170,7 +168,6 @@
             </div> 
           </form>
         </li> 
-        <!-- TODO initier avec la classe ...--close -->
         <li class="sort__item sort__item--close sort__item--tools">
           <button class="sort__button sort__button--tools"
             type="button">Ustensiles
