dynamic and functional dropdowns

--- a/index.html
+++ b/index.html
@@ -68,141 +68,10 @@
         </li>
       </ul>
     </div>
-    <!-- TODO collapse qui se déroule sur un input text avec liste de tous les
-    ingrédients et qui diminue selon se qui est tapé -->
+    <!-- TODO collapse qui se déroule sur un input text avec liste de tous les ingrédients et qui diminue selon se qui est tapé -->
     <!-- TODO voir si les input sont type text ou search -->
     <div class="header__containerSort">
-      <ul class="sort__list">
-        <!-- <li class="sort__item sort__item--close sort__item--ingredients">
-          <button class="sort__button sort__button--ingredients" type=button>
-              Ingrédients
-                <img 
-                class="sort__arrow sort__arrow--ingredients" 
-                src="assets/arrow-down.svg"
-                alt="arrow">
-          </button>
-          <form class="sort__form sort__form--ingredients">
-            <div class="sort__wrapper sort__wrapper--ingredients">
-              <fieldset class="sort__field sort__field--ingredients">
-                <label class="sort__label"for="sort__inputText--ingredients">
-                  Rechercher un ingrédient
-                </label>
-                <input 
-                type="text"
-                id="sort__inputText--ingredients"
-                class="sort__inputText"
-                name="sort__inputText--ingredients"
-                placeholder="Rechercher un ingrédient">
-              </fieldset>
-              <button class="form__button form__button--ingredients" type="button">
-                <img 
-                class="sort__arrow sort__arrow--up sort__arrow--ingredients" 
-                src="assets/arrow-down.svg"
-                alt="arrow">
-              </button>
-            </div>
-            <div class="sort__choice sort__choice--ingredients">
-              <p class="choice__value"> valeur 1 </p>
-              <p class="choice__value"> valeur 2 </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-              <p class="choice__value"> valeur </p>
-            </div> 
-          </form>
-        </li>  -->
-        <li class="sort__item sort__item--close sort__item--appliances">
-          <button class="sort__button
-            sort__button--appliances" type="button">
-            Appareils
-              <img class="sort__picture sort__arrow--appliances"
-              src="assets/arrow-down.svg" alt="arrow"> 
-          </button>
-          <form class="sort__form sort__form--appliances">
-            <div class="sort__wrapper sort__wrapper--appliances">
-              <fieldset class="sort__field sort__field--appliances">
-                <label class="sort__label"for="sort__inputText--appliances">
-                  Rechercher un appareil
-                </label>
-                <input
-                class="sort__inputText"
-                type="text"
-                id="sort__inputText--appliances"
-                name="sort__inputText--appliances"
-                placeholder="Rechercher un appareil">
-              </fieldset>
-              <button class="form__button form__button--ingredients" type="button">
-                <img 
-                class="sort__arrow sort__arrow--up sort__arrow--ingredients" 
-                src="assets/arrow-down.svg"
-                alt="arrow"> 
-              </button>
-            </div>
-            <div class="sort__choice sort__choice--appliances">
-              <p> valeur </p> 
-              <p> valeur </p>
-            </div> 
-          </form>
-        </li> 
-        <li class="sort__item sort__item--close sort__item--tools">
-          <button class="sort__button sort__button--tools"
-            type="button">Ustensiles
-              <img class="sort__picture sort__arrow--tools"
-              src="assets/arrow-down.svg" alt="arrow">
-          </button>
-          <form class="sort__form sort__form--tools">
-            <div class="sort__wrapper sort__wrapper--tools">
-              <fieldset class="sort__field sort__field--tools">
-                <label class="sort__label"for="sort__inputText--tools">
-                  Rechercher un outils
-                </label>
-                <input
-                class="sort__inputText"
-                type="search"
-                id="sort__inputText--tools"
-                name="sort__inputText--tools"
-                placeholder="Rechercher un outil">
-              </fieldset>
-              <button class="form__button form__button--ingredients" type="button">
-                <img 
-                class="sort__arrow sort__arrow--up sort__arrow--ingredients" 
-                src="assets/arrow-down.svg"
-                alt="arrow"> 
-              </button>
-            </div >
-            <div class="sort__choice sort__choice--tools">
-              <p> valeur </p>
-              <p> valeur </p>
-              <p> valeur </p>
-              <p> valeur </p>
-            </div> 
-          </form>
-        </li>
-      </ul>
+      <ul class="sort__list"></ul>
     </div>
       <ul class="recipes__list"></ul>
   </main>
