--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
   <script src="./scripts/factories/recipe.js"></script> -->
   <!-- <script src="./scripts/models/recipe.js"></script> -->
   <script src="./scripts/templates/sort.js"></script>
-  <script src="./scripts/templates/recipe.js"></script>
+  <script src="./scripts/utils/tag.js"></script>
   <script src="./scripts/templates/tag.js"></script>
+  <script src="./scripts/templates/recipe.js"></script>
   <script src="./scripts/page/index.js"></script>
 </body>
 </html>
