WIP advanced search

--- a/index.html
+++ b/index.html
@@ -53,11 +53,8 @@
       <ul class="recipes__list"></ul>
   </main>
   <script src="data/data.js"></script>
-  <!-- <script src="./scripts/utils/api.js"></script>
-  <script src="./scripts/factories/recipe.js"></script> -->
-  <!-- <script src="./scripts/models/recipe.js"></script> -->
   <script src="./scripts/utils/search.js">
-  </script><script src="./scripts/utils/tag.js"></script>
+  </script><script src="./scripts/utils/advancedSearch.js"></script>
   <script src="./scripts/templates/sort.js"></script>
   <script src="./scripts/templates/tag.js"></script>
   <script src="./scripts/templates/recipe.js"></script>
