--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="header__containerTitle">
       <img 
       class="header__logo" 
-      src="assets/logo.svg" 
+      src="assets/Logo.svg" 
       alt="logo">
       <h1 class="header__title">Les petits plats</h1>
     </div>
